--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,79 @@
 .App {
-  text-align: center;
+    display: flex;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.App>div:first-child {
+    width: 20vw;
+    height: 100vh;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.App>div:last-child {
+    width: 80vw;
+    height: 100vh;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
-.App-link {
-  color: #61dafb;
+.comp-responsive-filter-button {
+    display: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@media (max-width: 1199.98px) {
+    .App>div:first-child {
+        width: 30vw;
+    }
+    .App>div:last-child {
+        width: 70vw;
+    }
+}
+
+@media (max-width: 991.98px) {
+    .App>div:first-child {
+        width: 30vw;
+    }
+    .App>div:last-child {
+        width: 70vw;
+    }
+}
+
+@media (max-width: 767.98px) {
+    .comp-responsive-filter-button {
+        display: block;
+        z-index: 2;
+        position: fixed;
+        right: 30px;
+        top: 9px;
+    }
+    .App>div:first-child.comp-list-close {
+        display: none;
+    }
+    .App>div:first-child {
+        z-index: 1;
+        position: fixed;
+        width: 100vw;
+    }
+    .App>div:last-child {
+        width: 100vw;
+    }
+}
+
+@media (max-width: 575.98px) {
+    .App>div:first-child {
+        width: 100vw;
+    }
+    .App>div:last-child {
+        width: 100vw;
+    }
+}
+
+.comp-checkbox-children-container label {
+    padding-left: 45px;
+    background: #007bff;
+    border: none;
+}
+
+.card-columns .card {
+    border: none;
 }
