--- a/src/App.css
+++ b/src/App.css
@@ -2,18 +2,33 @@
     display: flex;
 }
 
-.App>div:first-child {
+.App ul {
+    padding: 0;
+    margin: 0;
+}
+
+.App li {
+    list-style: none;
+}
+
+.App>*:first-child {
     width: 20vw;
     height: 100vh;
     overflow-y: auto;
     overflow-x: hidden;
 }
 
-.App>div:last-child {
+.App>*:last-child {
     width: 80vw;
     height: 100vh;
     overflow-y: auto;
     overflow-x: hidden;
+    padding: 1rem;
+}
+
+h1 {
+    font-size: 1rem;
+    padding-right: 4.5rem;
 }
 
 .comp-responsive-filter-button {
@@ -21,19 +36,19 @@
 }
 
 @media (max-width: 1199.98px) {
-    .App>div:first-child {
+    .App>*:first-child {
         width: 30vw;
     }
-    .App>div:last-child {
+    .App>*:last-child {
         width: 70vw;
     }
 }
 
 @media (max-width: 991.98px) {
-    .App>div:first-child {
+    .App>*:first-child {
         width: 30vw;
     }
-    .App>div:last-child {
+    .App>*:last-child {
         width: 70vw;
     }
 }
@@ -43,33 +58,33 @@
         display: block;
         z-index: 2;
         position: fixed;
-        right: 30px;
-        top: 9px;
+        right: 1rem;
+        top: 0.5rem;
     }
-    .App>div:first-child.comp-list-close {
+    .App>*:first-child.comp-list-close {
         display: none;
     }
-    .App>div:first-child {
+    .App>*:first-child {
         z-index: 1;
         position: fixed;
         width: 100vw;
     }
-    .App>div:last-child {
+    .App>*:last-child {
         width: 100vw;
     }
 }
 
 @media (max-width: 575.98px) {
-    .App>div:first-child {
+    .App>*:first-child {
         width: 100vw;
     }
-    .App>div:last-child {
+    .App>*:last-child {
         width: 100vw;
     }
 }
 
 .comp-checkbox-children-container label {
-    padding-left: 45px;
+    padding-left: 3rem;
     background: #007bff;
     border: none;
 }
